<resources>
    <string name="app_name">URL TV Alpha</string>
    <!-- Error Messages -->
    <string name="error_invalid_user_agent">User agent is too short or invalid</string>
    <string name="error_title_required">Title is required</string>
    <string name="error_title_too_short">Title must be at least 3 characters</string>
    <string name="error_title_exists">A channel with this title already exists</string>
    <string name="error_url_required">URL is required</string>
    <string name="error_invalid_url">Please enter a valid streaming URL (HLS, MP4, AVI, MKV, RTMP, RTSP, etc.)</string>
    <string name="error_saving_channel">Error saving channel</string>
    <string name="error_loading_channels">Error loading channels</string>
    <string name="error_invalid_position">Invalid channel position</string>
    <string name="error_channel_not_found">Channel not found</string>
    <string name="error_updating_list">Error updating channel list</string>
    <string name="error_removing_channel">Error removing channel</string>
    <string name="error_adding_channel">Error adding channel</string>
    <string name="error_updating_channel">Error updating channel</string>
    <string name="error_deleting_channel">Error deleting channel</string>
    <string name="error_playback">Error playing video</string>
    <!-- Additional error messages for M3U8ServerActivity -->
    <string name="no_internet_connection">No internet connection</string>
    <string name="error_title">Error</string>
    <string name="retry">Retry</string>
    <string name="back">Back</string>
    <string name="database_error">Database error: %s</string>
    <string name="error_loading_channels_with_message">Error loading channels: %s</string>
    <string name="no_results">No Results</string>
    <string name="no_channels_found">No channels found for %s</string>

    <!-- Success Messages -->
    <string name="success_channel_saved">Channel saved successfully</string>
    <string name="success_channel_updated">Channel updated successfully</string>
    <string name="success_channel_deleted">Channel deleted successfully</string>
    <string name="success_channel_removed">Channel removed successfully</string>
    <string name="success_channel_added">Channel added successfully</string>
    <string name="success_list_updated">Channel list updated</string>

    <!-- URL Types -->
    <string name="url_type_hls">HLS Stream</string>
    <string name="url_type_rtmp">RTMP Stream</string>
    <string name="url_type_rtsp">RTSP Stream</string>
    <string name="url_type_http">HTTP Stream</string>
    <string name="url_type_mp4">MP4 Video</string>
    <string name="url_type_udp">UDP Stream</string>
    <string name="url_type_rtp">RTP Stream</string>
    <string name="url_type_mms">MMS Stream</string>
    <string name="url_type_ts">Transport Stream</string>
    <string name="url_type_srt">SRT Stream</string>

    <!-- Update Activity -->
    <string name="update_channel">Update Channel</string>
    <string name="delete_channel">Delete Channel</string>
    <string name="delete_channel_confirmation">Are you sure you want to delete this channel?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- Empty State -->
    <string name="empty_channels_message">No channels added yet.\nTap + to add your first channel.</string>

    <!-- New string for empty state icon -->
    <string name="empty_state_icon">Empty state icon</string>


    <!-- App Info -->
    <string name="app_description">Watch Online Videos</string>

    <!-- Navigation Menu -->
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="share_message">Share via</string>
    <string name="email_subject">Regarding URL-TV App</string>
    <string name="error_privacy_policy">Unable to open privacy policy</string>
    <string name="error_no_email">No email app found</string>

    <string name="duration">00:00</string>
    <string name="image">Image</string>
    <string name="loading">Loading...</string>
    <string name="video_name">URL Player Beta</string>
    <string name="folder_name">Folder Name</string>
    <string name="semi_colon">/</string>
    <string name="lock">Lock Button</string>
    <string name="back_btn">Back</string>
    <string name="menu">Menu</string>
    <string name="prev_btn">Previous</string>
    <string name="next_btn">Next</string>
    <string name="repeat_btn">Repeat</string>
    <string name="fullscreen_btn">Fullscreen</string>
    <string name="play_btn">Play</string>

    <!--    for menu-->
    <string name="audio_track">Audio Track</string>
    <string name="subtitles">Subtitles</string>
    <string name="booster">Booster</string>
    <string name="speed">1.0x</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="pip_mode">PiP Mode</string>
    <string name="search">Search</string>

    <!--strings for video more features-->
    <string name="rename">Rename </string>
    <string name="info">Info</string>
    <string name="share">Share</string>
    <string name="orientation">Orientation</string>
    <string name="O">0</string>
    <string name="apply_to_all">Apply to all videos</string>
    <string name="video_quality">Video Quality</string>

    <string name="select_quality">Select Quality</string>
    <string name="auto_quality_enabled">Auto quality enabled</string>
    <string name="quality_changed">Quality changed to %1$s</string>
    <string name="quality_change_failed">Failed to change quality: %1$s</string>

    <!-- Main Activity -->
    <string name="main_content">Main content</string>
    <string name="drawer_content">Navigation drawer content</string>
    <string name="tv_icon">TV icon</string>
    <string name="online_videos">ONLINE VIDEOS</string>



    <!-- AdMob Ad Unit IDs -->
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_interstitial_id" translatable="false">ca-app-pub-6211293117600297/8164811929</string>
    <string name="admob_banner_id" translatable="false">ca-app-pub-6211293117600297/1223133082</string>
    <string name="admob_rewarded_interstitial_id" translatable="false">ca-app-pub-3940256099942544/5354046379</string>

    <!-- For testing, you can use these test IDs -->
    <!--    <string name="admob_interstitial_id" translatable="true">ca-app-pub-3940256099942544/1033173712</string>-->
    <!--    <string name="admob_banner_id" translatable="true">ca-app-pub-3940256099942544/6300978111</string>-->
    <!--    <string name="admob_rewarded_interstitial_id" translatable="true">ca-app-pub-3940256099942544/5354046379</string>-->

    <string name="app_logo">App Logo</string>
    <string name="version">Version %s</string>
    <string name="version_format">Version %s</string>
    <string name="developed_by">Developed by</string>
    <string name="developer_name">Samyak2403\nhttps://github.com/samyak2403</string>
    <string name="developer_name_display">Samyak Kamble</string>

    <string name="about">About</string>

    <string name="channel_image">Channel Image</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="app_feedback_message">Thanks for using our app!</string>
    <string name="email_error_message">Couldn\'t open email app</string>
    <string name="github_error_message">Couldn\'t open GitHub profile</string>
    <string name="github_profile">GitHub Profile</string>
    <string name="view_on_github">View on GitHub</string>
    <string name="developer_avatar">Developer Avatar</string>
    <string name="copyright_text">© 2025 URL TV Alpha. All rights reserved.</string>

    <string name="search_icon">Search Icon</string>
    <string name="clear_search">Clear Search</string>
    <string name="search_hint">Search channels...</string>
    <string name="no_search_results">No results found for \"%s\"</string>
    <string name="search_activity_title">Search</string>

</resources>